tests/negative/class/class_private_static_access.tx
// EXPECTED: COMPILE_ERROR
// Description: Private static members cannot be accessed outside the declaring class.

class SecretMath {
    private static seed: int = 9;

    private static next(): int {
        return SecretMath.seed + 1;
    }
}

function main() {
    let a = SecretMath.seed;
    let b = SecretMath.next();
    print(a, b);
}
